# filereduce

./: .dockerignore  .env  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Mercado.md  NEXT_STEPS.md  README.md  arquitectura.md  build_log.txt  build_log_2.txt  cloudbuild.yaml  config.yaml  correciones.md  input.edi  out.jsonl  out_q1.jsonl  out_q3.jsonl  output.jsonl  output_v3.jsonl  pruebas.md  queryFilereduce.sql  repro_input.edifact  repro_input_v2.edifact  repro_input_v3.edifact  sample_small.edi  tareas.md  test.edi  test.jsonl  test.xml  test_sample.edi  translations.json  translations.rs
.kilo/: agent-manager.json
.zed/: debug.json
benches/: processing_bench.rs  query_bench.rs
engine_filereduce/: Cargo.toml
engine_filereduce/src/: error.rs  lib.rs  row.rs
engine_filereduce/src/executor/: executor.rs
engine_filereduce/src/query/: aggregation.rs  ast.rs  mod.rs  parser.rs  row_builder.rs  segment.rs
engine_filereduce/src/reader/: edi.rs  reader.rs
engine_filereduce/tests/: aggregation_tests.rs  executor_tests.rs  orderby_tests.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/compression/: page.tsx
frontend/app/faqs/: page.tsx
frontend/app/generate/: GenerateClient.tsx  page.tsx
frontend/components/: ClientLayout.tsx  Dashboard.tsx  DataGrid.tsx  FileUpload.tsx  Footer.tsx  FraCompression.tsx  Header.tsx
frontend/lib/: wasmWorker.ts
frontend/lib/i18n/: LanguageContext.tsx  en.json  es.json  index.ts
frontend/public/: filereduce_wasm.d.ts  filereduce_wasm.js.backup  filereduce_wasm.wasm  filereduce_wasm_bg.wasm  filereduce_wasm_bg.wasm.d.ts  worker.js  worker.mjs
scraper/: Cargo.toml
scraper/src/: lib.rs  main.rs
scripts/: start.sh
src/: cli.rs  config.rs  core.rs  error.rs  lib.rs  main.rs  processor.rs  serializer.rs  version_detector.rs
src/model/: document.rs  streaming.rs
src/parser/: edifact.rs  json.rs  mod.rs  segment.rs  tokenizer.rs  xml.rs
src/sink/: db.rs  mod.rs
src/storage/: gcs.rs  mod.rs
src/storage/sink/: file.rs
src/translations/: config.rs  mod.rs  registry.rs
standards/: D00A.json  D00B.json  D01A.json  D01B.json  D02A.json  D02B.json  D03A.json  D03B.json  D04A.json  D04B.json  D05A.json  D05B.json  D06A.json  D06B.json  D07A.json  D07B.json  D08A.json  D08B.json  D09A.json  D09B.json  D10A.json  D10B.json  D11A.json  D11B.json  D12A.json  D12B.json  D13A.json  D13B.json  D14A.json  D14B.json  D15A.json  D15B.json  D16A.json  D16B.json  D17A.json  D17B.json  D18A.json  D921.json  D93A.json  D94A.json  (+9 more)
tests/: integration_tests.rs  parse_sample.rs
tests/fixtures/: sample.edifact  sample.json  sample.jsonl  sample.xml
wasm/: Cargo.toml
wasm/pkg/: filereduce_wasm_bg.wasm
wasm/src/: lib.rs
