[package]
name = "filereduce"
version = "0.1.0"
edition = "2021"
description = "procesador de archivos de gran peso EDIFACT,XML,JSON para generar archivos jsonl y otros formatos, optimizado para grandes volúmenes de datos"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Omar52344/filereduce.git"
keywords = ["edifact", "xml", "json", "jsonl"]
categories = ["development-tools", "file-processing", "data-processing"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
engine_filereduce = { path = "engine_filereduce" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
quick-xml = "0.36"
tokio = { version = "1.49.0", features = ["full"] }
tiberius = "0.12.3"
tokio-util = "0.7.18"
serde_yaml = "0.9.34"
async-trait = "0.1.89"
futures = "0.3.31"
bb8 = "0.9.1"
bb8-tiberius = "0.16.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "processing_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false
