[package]
name = "filereduce-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
url = "2"
regex = "1"
chrono = "0.4"
filereduce = { path = "..", features = ["core"], default-features = false }

[dev-dependencies]
tempfile = "3"