[package]
name = "filereduce-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for FileReduce EDIFACT/JSONL processing and compression"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Omar52344/filereduce.git"
keywords = ["wasm", "edifact", "jsonl", "compression", "webassembly"]
categories = ["wasm", "file-processing", "data-processing"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
filereduce = { path = "../", default-features = false, features = ["core"] }
filereducelib = { path = "../filereducelib", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1